# Rust-Rules-Engine

./: .gitignore  BENCHMARKS.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.cargo-husky/hooks/: pre-commit
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: audit.rs  eval_result.rs  event.rs  lib.rs  rule.rs
crates/core/tests/: contract.rs
crates/eval/: Cargo.toml  README.md
crates/eval/src/: compiled.rs  evaluate.rs  lib.rs
crates/eval/tests/: parity.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: consumer.rs  lib.rs  metrics.rs  rule_cache.rs  wal.rs
crates/pipeline/tests/: rule_cache_integration.rs
crates/sre/: Cargo.toml
crates/sre/src/: analysis.rs  auto_tune.rs  dashboard.rs  docker.rs  lib.rs  probes.rs  store.rs  trace_analysis.rs
crates/sre/tests/: store_integration.rs
crates/store-clickhouse/: Cargo.toml
crates/store-clickhouse/src/: analytics.rs  lib.rs
crates/store-clickhouse/tests/: integration.rs
crates/store-postgres/: Cargo.toml
crates/store-postgres/src/: lib.rs
crates/store-postgres/tests/: integration.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs
crates/web/: Cargo.toml
crates/web/src/: error.rs  lib.rs  tests.rs
crates/web/src/routes/: analytics.rs  config.rs  health.rs  integration.rs  metrics.rs  mod.rs  reports.rs  rules.rs  simulation.rs
deploy/: Dockerfile.app  Dockerfile.sre  docker-compose.observability.yml  docker-compose.yml  otel-collector-config.yaml  run.sh  signoz-clickhouse-config.xml  signoz-clickhouse-users.xml  signoz-otelcollector-config.yaml
deploy/clickhouse/: config.xml  users.xml
deploy/dashboards/: import.sh  rre-main.json
deploy/postgres/: init.sh  replica-entrypoint.sh
docs/: architecture.md  developer-guide.md  infrastructure-diagram.html  infrastructure.md  scaling-decisions.md
docs/superpowers/plans/: 2026-06-20-otel-tracing-llm-insights.md  2026-06-28-integration-tests-ui-tab.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: AnalyticsDashboard.tsx  App.tsx  ConfigTab.tsx  HealthBar.tsx  MetricsTab.tsx  ReportsTab.tsx  SimulationPanel.tsx  SreTab.tsx  SystemHealthOverlay.tsx  TracingInsightsTab.tsx  types.ts  useActiveOutages.ts
migrations/clickhouse/: 0001_audits.sql  0002_sre_observations.sql  0003_analytics.sql  0004_sre_outages.sql  0005_pipeline_lag.sql
migrations/postgres/: 0001_rules.sql
plans/: rust-rules-engine-rebuild.md  s0-bootstrap-blueprint.md  sre-agent-blueprint.md
specs/: fix-arc-str-raw.md  fix-clippy-misc.md  fix-consumer-panics.md  fix-cors-v2.md  fix-cors.md  fix-main-reload.md  fix-sre-oneshot-outages.md  fix-trace-json-extract.md  s3-store-clickhouse-lib.md  s4-analytics-query.md  s5-store-postgres-lib.md  s6-pipeline-consumer.md  s7-rule-cache.md  sre-analysis.md  sre-dashboard.md  sre-docker-oneshot.md  sre-docker.md  sre-lib-oneshot-ratelimit.md  sre-one-shot-filter-lib.md  sre-one-shot-filter.md  sre-store.md  task-5-integration-page.md
tools/: llm-gen.sh  load-test.sh  sre-remediate.py
