[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/eval",
    "crates/store-clickhouse",
    "crates/store-postgres",
    "crates/pipeline",
    "crates/web",
    "crates/sre",
    "bin/rules-engine",
    "bin/sre-agent",
]

[workspace.package]
edition = "2021"
rust-version = "1.94"
license = "MIT"

[workspace.dependencies]
# Kept central so versions are pinned once. Extended by later steps
# (tokio, axum, rdkafka, sqlx, clickhouse, cel-interpreter…).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
cel-interpreter = { version = "0.10.0", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
arc-swap = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rdkafka = { version = "0.36", features = ["tokio"] }
