[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/eval",
    "crates/store-clickhouse",
    "crates/store-postgres",
    "crates/pipeline",
    "crates/web",
    "crates/sre",
    "crates/telemetry",
    "crates/test-support",
    "bin/rules-engine",
    "bin/sre-agent",
]

[workspace.package]
edition = "2021"
rust-version = "1.94"
license = "MIT"

[workspace.dependencies]
# Kept central so versions are pinned once. Extended by later steps
# (tokio, axum, rdkafka, sqlx, clickhouse, cel-interpreter…).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
cel-interpreter = { version = "0.10.0", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "process", "io-util"] }
arc-swap = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rdkafka = { version = "0.36", features = ["tokio"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4"] }
rayon = "1"
opentelemetry                 = { version = "0.27", features = ["trace", "logs"] }
opentelemetry_sdk             = { version = "0.27", features = ["rt-tokio", "trace", "logs"] }
opentelemetry-otlp            = { version = "0.27", features = ["tonic", "trace", "logs"] }
opentelemetry-appender-tracing = { version = "0.27" }
tracing-opentelemetry         = "0.28"

[workspace.metadata.cargo-husky]
# cargo-husky reads this section for hook configuration.

