[package]
name = "sre"
edition.workspace = true
rust-version.workspace = true
version = "0.0.0"
publish = false

[dependencies]
bollard        = "0.17"
reqwest        = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum           = { version = "0.8", features = ["tokio"] }
sha2           = "0.10"
hex            = "0.4"
futures-util   = "0.3"
tokio-stream   = { version = "0.1", features = ["sync"] }
clickhouse     = { version = "0.15.1", features = ["inserter", "chrono"] }
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
chrono         = { workspace = true }
thiserror      = { workspace = true }
anyhow         = "1"

[dev-dependencies]
tokio = { workspace = true }
test-support = { path = "../test-support" }
tempfile = "3"
