[package]
name = "store-clickhouse"
edition.workspace = true
rust-version.workspace = true
version = "0.0.0"
publish = false

[dependencies]
clickhouse = { version = "0.15.1", features = ["inserter", "chrono"] }
rules-core = { path = "../core" }
serde = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
test-support = { path = "../test-support" }
