[package]
name = "telemetry"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
opentelemetry                  = { workspace = true }
opentelemetry_sdk              = { workspace = true }
opentelemetry-otlp             = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
tracing-opentelemetry          = { workspace = true }
tracing                        = { workspace = true }
tracing-subscriber             = { workspace = true }
tokio                          = { workspace = true }
