[package]
name = "web"
edition.workspace = true
rust-version.workspace = true
version = "0.0.0"
publish = false

[dependencies]
rules-core        = { path = "../core" }
eval              = { path = "../eval" }
store-postgres    = { path = "../store-postgres" }
store-clickhouse  = { path = "../store-clickhouse" }
axum              = { workspace = true }
tower             = { workspace = true }
tower-http        = { workspace = true }
tokio             = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
chrono            = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }
rdkafka           = { workspace = true }
uuid              = { workspace = true }
