[package]
name = "web"
edition.workspace = true
rust-version.workspace = true
version = "0.0.0"
publish = false

[dependencies]
rules-core        = { path = "../core" }
eval              = { path = "../eval" }
pipeline          = { path = "../pipeline" }
store-postgres    = { path = "../store-postgres" }
store-clickhouse  = { path = "../store-clickhouse" }
sqlx              = { version = "0.9", default-features = false, features = ["runtime-tokio", "postgres"] }
clickhouse        = { version = "0.15.1", features = ["inserter", "chrono"] }
axum              = { workspace = true }
tower             = { workspace = true }
tower-http        = { workspace = true, features = ["trace"] }
tokio             = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
chrono            = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }
rdkafka           = { workspace = true }
uuid              = { workspace = true }
futures           = "0.3"
bytes             = "1"

[dev-dependencies]
http-body-util    = "0.1"
tower-service     = "0.3"
test-support = { path = "../test-support" }
